24-eks-addons/08-efs-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploads-frontend
spec:
  replicas: 3
  selector:
    matchLabels: { app: uploads-frontend }
  template:
    metadata:
      labels: { app: uploads-frontend }
    spec:
      containers:
        - name: web
          image: nginx:1.27
          volumeMounts:
            - name: uploads
              mountPath: /usr/share/nginx/html/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
